# aegis

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  aegis-net.toml
.github/workflows/: ci.yml  docs.yml
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs  output.rs
crates/aegis-cli/src/commands/: bootstrap.rs  diff.rs  enforce.rs  init.rs  inventory.rs  link.rs  mod.rs  net.rs  opencode.rs  profile.rs  push.rs  remote.rs  secrets.rs  status.rs  sync.rs  toolchain.rs  watch.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: config.rs  diff.rs  enforce.rs  inventory.rs  lib.rs  manifest.rs  module.rs  package.rs  profile.rs  resolver.rs  ssh.rs  template.rs  variables.rs
crates/aegis-net/: Cargo.toml
crates/aegis-net/src/: ca.rs  config.rs  firewall.rs  lib.rs  peer.rs  status.rs  wg.rs
crates/aegis-opencode/: Cargo.toml
crates/aegis-opencode/src/: agents.rs  lib.rs  mcp.rs  models.rs  oh_my_opencode.rs  opencode.rs
crates/aegis-secrets/: Cargo.toml
crates/aegis-secrets/src/: crypto.rs  store.rs
crates/aegis-toolchain/: Cargo.toml
crates/aegis-toolchain/src/: health.rs  installer.rs  lib.rs  registry.rs
docs/: config.toml
docs/content/: _index.md  aegis-net.md
docs/content/cli-reference/: _index.md  bootstrap.md  diff.md  init.md  link.md  opencode-cmd.md  profile-cmd.md  status.md  sync.md  toolchain-cmd.md
docs/content/configuration/: _index.md  manifest.md  modules.md  variables.md
docs/content/getting-started/: _index.md  concepts.md  installation.md  quickstart.md
docs/content/guides/: _index.md  from-battlestation.md  new-machine.md  nimakai.md
docs/content/opencode/: _index.md  agents.md  mcp-servers.md  overview.md  providers.md
docs/content/toolchain/: _index.md  overview.md
docs/sass/: style.scss
docs/templates/: base.html  index.html  page.html  section.html
example/: aegis.toml
example/modules/ai-tools/: module.toml  opencode.toml
example/modules/container-services/: ix-backend.env.template  module.toml
example/modules/dev-tools/: module.toml
example/modules/dev-tools/bat/: config
example/modules/dev-tools/git/: gitconfig
example/modules/dirmacs/: module.toml
example/modules/languages/: module.toml
example/modules/my-platform/: module.toml
example/modules/my-services/: gateway.env  module.toml  worker-extra.env
example/modules/shell/: bashrc  module.toml  starship.toml
example/modules/terminal/: module.toml
example/modules/vps-services/: channel-gateway.env  doltares-channels.env  module.toml
