[package]
name = "aegis-core"
description = "Core library for aegis — manifest parsing, module system, templates, and diffing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tera = { workspace = true }
similar = { workspace = true }
which = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }

[dev-dependencies]
tempfile = "3"
