[package]
name = "aegis-secrets"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["dirmacs"]
repository = "https://github.com/dirmacs/aegis"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

# External dependencies
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
