[package]
name = "aegis-toolchain"
description = "Dirmacs ecosystem toolchain management — install, update, and health check"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aegis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
semver = { workspace = true }
lancor = { workspace = true }
